# LibLLM

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
.agents/: RULES.md
.github/workflows/: build.yml  check.yml  cleanup.yml  release.yml
backup/: Cargo.toml
backup/src/: crypto.rs  diff.rs  export.rs  hash.rs  index.rs  lib.rs  main.rs  rekey.rs  restore.rs  retention.rs  snapshot.rs  verify.rs
backup/src/migrations/: mod.rs  v2.rs
backup/tests/: integration.rs  snapshot_dek.rs
client/: Cargo.toml  build.rs
client/src/: cli.rs  edit.rs  import.rs  interactive.rs  legacy_migration.rs  lib.rs  main.rs  recover.rs  time.rs  update.rs  validation.rs  version.rs
client/src/cli/: mod.rs
client/src/cli/db/: dump.rs  format.rs  import.rs  mod.rs  parser.rs  shell.rs  sql.rs
client/src/tui/: business.rs  clipboard.rs  commands.rs  dialog_handler.rs  events.rs  input.rs  input_file_cache.rs  maintenance.rs  mod.rs  render.rs  state.rs  theme.rs  thought.rs  types.rs
client/src/tui/commands/: background.rs  danger.rs  export.rs  macros.rs  mod.rs  streaming.rs
client/src/tui/dialogs/: api_error.rs  auth.rs  branch.rs  builders.rs  character.rs  crypto.rs  danger_confirm.rs  danger_tab.rs  danger_typed_confirm.rs  delete_confirm.rs  edit.rs  file_picker.rs  injection_warning.rs  mod.rs  mouse.rs  paged_list.rs  passkey.rs  persona.rs  preset.rs  set_passkey.rs  system_prompt.rs  tabbed_field.rs  template_prompt.rs  validation.rs  worldbook.rs
client/src/tui/render/: measurement.rs  mod.rs  status_bar.rs  text.rs
client/tests/: business_logic.rs  cli.rs  configuration.rs  content.rs  content_management.rs  core_data.rs  danger_subprocess.rs  danger_tab.rs  db_subcommand.rs  file_summary.rs  import_subcommand.rs  infrastructure.rs  lints.rs  persistence.rs  recover_subcommand.rs  smoke.rs  template_detection.rs  tokenization.rs  tui_business.rs
client/tests/common/: mod.rs
libllm/: Cargo.toml  build.rs
libllm-core/: Cargo.toml
libllm-core/src/: character.rs  commands.rs  config.rs  context.rs  crypto.rs  export.rs  lib.rs  migration.rs  persona.rs  session.rs  system_prompt.rs  template.rs  worldinfo.rs
libllm-core/src/db/: characters.rs  mod.rs  personas.rs  prompts.rs  sessions.rs  worldbooks.rs
libllm-core/src/presets/instruct/: alpaca.json  llama3_instruct.json
libllm-core/src/presets/template/: default.json
libllm-migrate/: Cargo.toml
libllm-migrate/src/: legacy.rs  main.rs
libllm/src/: archive.rs  character.rs  cli.rs  client.rs  commands.rs  config.rs  context.rs  crypto.rs  crypto_provider.rs  debug_log.rs  export.rs  lib.rs  main.rs  migration.rs  persona.rs  preset.rs  sampling.rs  session.rs  side_character.rs  summarize.rs  system_prompt.rs  template.rs  thought.rs  update.rs  worldinfo.rs
libllm/src/db/: characters.rs  dismissed_templates.rs  file_summaries.rs  mod.rs  personas.rs  prompts.rs  schema.rs  sessions.rs  worldbooks.rs
libllm/src/db/migrations/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs
libllm/src/diagnostics/: banner.rs  format.rs  io_helpers.rs  mod.rs  subscriber.rs  sysinfo_snapshot.rs  timings.rs
libllm/src/files/: classify.rs  error.rs  mod.rs  parse.rs  resolve.rs  rewrite.rs  snapshot.rs  summary.rs
libllm/src/preset/: context.rs  instruct.rs  matching.rs  mod.rs  reasoning.rs
libllm/src/preset/matching_fixtures/: chatml.jinja  llama3.jinja  mistral_v3.jinja  nonsense.jinja
libllm/src/tokenizer/: mod.rs
libllm/src/tui/: business.rs  commands.rs  input.rs  maintenance.rs  mod.rs  render.rs  theme.rs
libllm/src/tui/dialogs/: character.rs  delete_confirm.rs  edit.rs  mod.rs  passkey.rs  persona.rs  preset.rs  set_passkey.rs  system_prompt.rs  worldbook.rs
libllm/tests/: content_management.rs  core_data.rs  diagnostics.rs  infrastructure.rs  request_pipeline.rs  tui_business.rs
libllm/tests/common/: mod.rs
migrate/: Cargo.toml
migrate/src/: backup.rs  legacy.rs  main.rs
src/: character.rs  cli.rs  client.rs  commands.rs  config.rs  context.rs  crypto.rs  debug_log.rs  export.rs  index.rs  interactive.rs  lib.rs  main.rs  migration.rs  persona.rs  preset.rs  prompt.rs  render.rs  sampling.rs  session.rs  system_prompt.rs  tui.rs  update.rs  worldinfo.rs
src/presets/instruct/: chatml.json  mistral_v3_tekken.json  phi.json
src/tui/: business.rs  clipboard.rs  commands.rs  input.rs  maintenance.rs  mod.rs  render.rs  theme.rs
src/tui/dialogs/: api_error.rs  branch.rs  character.rs  delete_confirm.rs  edit.rs  mod.rs  passkey.rs  persona.rs  preset.rs  set_passkey.rs  system.rs  system_prompt.rs  worldbook.rs
tests/: content_management.rs  core_data.rs  infrastructure.rs  request_pipeline.rs  smoke.rs  tui_business.rs
tests/common/: mod.rs
