[package]
name = "libllm"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rustyline = "15"
futures-util = "0.3"
toml = "1.1.0"
dirs = "6.0.0"
termimad = "0.34.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
