[package]
name = "libllm"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "charset", "http2", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
toml = "1.1.0"
dirs = "6.0.0"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea-2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "5"
zeroize = { version = "1.8.2", features = ["derive"] }
sha2 = "0.11.0"
base64 = "0.22"
uuid = { version = "1.23.0", features = ["v4"] }
