[package]
name = "backup"
version = "1.0.0"
edition = "2024"

[dependencies]
libllm = { path = "../libllm" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
chacha20poly1305 = "0.5"
bsdiff = "0.2"
zstd = "0.13"
argon2 = "0.5"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
