[package]
name = "backup"
version.workspace = true
edition.workspace = true

[dependencies]
libllm = { path = "../libllm" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
chacha20poly1305 = "0.5"
base64 = "0.22"
hkdf = "0.12"
bsdiff = "0.2"
zstd = "0.13"
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
tempfile = "3"
zeroize = "1.8.2"

[dev-dependencies]
libllm = { path = "../libllm", features = ["test-support"] }
tempfile = "3"

[lints]
workspace = true
