[package]
name = "client"
version = "1.0.0"
edition = "2024"

[dependencies]
libllm = { path = "../libllm" }
backup = { path = "../backup" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider", "charset", "http2", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea-2 = "0.10"
rpassword = "7"
dialoguer = "0.11"
rustyline = { version = "14", features = ["with-file-history"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
arboard = "3"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
libllm = { path = "../libllm", features = ["test-support"] }
tempfile = "3.27.0"
toml = "1.1.0"

[lints]
workspace = true
