[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
libllm = { path = "../libllm" }
backup = { path = "../backup" }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider", "charset", "http2", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea-2 = "0.10"
rpassword = "7"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
rustyline = { version = "14", features = ["with-file-history"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
arboard = "3"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1.8.2"
regex = { workspace = true }

[dev-dependencies]
libllm = { path = "../libllm", features = ["test-support"] }
tempfile = "3.27.0"
toml = "1.1.0"
wiremock = "0.6"

[lints]
workspace = true
