[package]
name = "libllm-core"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
uuid = { version = "1.23.0", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.11.0"
zeroize = { version = "1.8.2", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "charset", "http2", "system-proxy"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.37"
rusqlite = { version = "0.35", features = ["bundled-sqlcipher"] }

[dev-dependencies]
tempfile = "3"

[features]
test-support = []
