[package]
name = "libllm-migrate"
version = "1.0.0"
edition = "2024"

[dependencies]
libllm-core = { path = "../libllm-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
aes-gcm = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
sevenz-rust = "0.6"
dirs = "6.0.0"
rpassword = "5"
