[package]
name = "libllm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
uuid = { version = "1.23.0", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
argon2 = "0.5"
rand = "0.9"
zeroize = { version = "1.8.2", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider", "charset", "http2", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sysinfo = "0.38"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter", "std"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"

[features]
test-support = []

[lints]
workspace = true
